# base-logger

./: .gitignore  LICENSE  pytest.ini  setup.cfg
base_logger/: __init__.py  base_logger.py
tests/: conftest.py  test_class_method.py  test_instance_method.py  test_property.py  test_static_method.py
