[metadata]
name = base_logger
author = Claudio Ortiz
version = 0.0.3
author-email = claudio.enoch@gmail.com
license = MIT
long_description = file: README.md
url = https://github.com/Claudio-Enoch/base-logger
requires-python = >=3.8
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
platforms = any

[options]
packages =
    base_logger